--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -850,7 +850,7 @@
 % \begin{macro}{\@@_image_getbb_eps:n}
 %   Simply use the generic function.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_image_getbb_eps:n \__image_read_bb:n
+\cs_new_eq:NN \@@_image_getbb_eps:n \image_read_bb:n
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1470,13 +1470,13 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_getbb_jpg:n #1
   {
-    \int_zero:N \l__image_page_int
-    \tl_clear:N \l__image_pagebox_tl
+    \int_zero:N \l_image_page_int
+    \tl_clear:N \l_image_pagebox_tl
     \tl_set:Nx \l_@@_image_attr_tl
       {
-        \tl_if_empty:NF \l__image_decode_tl
-          { :D \l__image_decode_tl }
-        \bool_if:NT \l__image_interpolate_bool
+        \tl_if_empty:NF \l_image_decode_tl
+          { :D \l_image_decodearray_tl }
+        \bool_if:NT \l_image_interpolate_bool
           { :I }
       }
     \tl_clear:N \l_@@_image_attr_tl
@@ -1485,27 +1485,19 @@
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
-    \tl_clear:N \l__image_decode_tl
-    \bool_set_false:N \l__image_interpolate_bool
+    \tl_clear:N \l_image_decode_tl
+    \bool_set_false:N \l_image_interpolate_bool
     \tl_set:Nx \l_@@_image_attr_tl
       {
-        : \l__image_pagebox_tl
-        \int_compare:nNnT \l__image_page_int > 1
-          { :P \int_use:N \l__image_page_int }
+        : \l_image_pagebox_tl
+        \int_compare:nNnT \l_image_page_int > 1
+          { :P \int_use:N \l_image_page_int }
       }
     \@@_image_getbb_auxi:n {#1}
   }
 \cs_new_protected:Npn \@@_image_getbb_auxi:n #1
   {
-    \dim_zero:N \l__image_llx_dim
-    \dim_zero:N \l__image_lly_dim
-    \dim_if_exist:cTF { c__image_ #1 \l_@@_image_attr_tl _urx_dim }
-      {
-        \dim_set_eq:Nc \l__image_urx_dim
-          { c__image_ #1 \l_@@_image_attr_tl _urx_dim }
-        \dim_set_eq:Nc \l__image_ury_dim
-          { c__image_ #1 \l_@@_image_attr_tl _ury_dim }
-      }
+    \image_bb_restore:xF { #1 \l_@@_image_attr_tl }
       { \@@_image_getbb_auxii:n {#1} }
   }
 %    \begin{macrocode}
@@ -1518,32 +1510,29 @@
   {
     \tex_immediate:D \pdftex_pdfximage:D
       \bool_lazy_or:nnT
-        { \l__image_interpolate_bool }
-        { ! \tl_if_empty_p:N \l__image_decode_tl }
+        { \l_image_interpolate_bool }
+        { ! \tl_if_empty_p:N \l_image_decodearray_tl }
         {
           attr ~
             {
-              \tl_if_empty:NF \l__image_decode_tl
-                { /Decode~[ \l__image_decode_tl ] }
-              \bool_if:NT \l__image_interpolate_bool
+              \tl_if_empty:NF \l_image_decode_tl
+                { /Decode~[ \l_image_decodearray_tl ] }
+              \bool_if:NT \l_image_interpolate_bool
                 { /Interpolate~true }
             }
         }
-      \int_compare:nNnT \l__image_page_int > 0
-        { page ~ \int_use:N \l__image_page_int }
-      \tl_if_empty:NF \l__image_pagebox_tl
-        { \l__image_pagebox_tl }
+      \int_compare:nNnT \l_image_page_int > 0
+        { page ~ \int_use:N \l_image_page_int }
+      \tl_if_empty:NF \l_image_pagebox_tl
+        { \l_image_pagebox_tl }
       {#1}
-    \hbox_set:Nn \l__image_tmp_box
+    \hbox_set:Nn \l_@@_tmp_box
       { \pdftex_pdfrefximage:D \pdftex_pdflastximage:D }
-    \dim_set:Nn \l__image_urx_dim { \box_wd:N \l__image_tmp_box }
-    \dim_set:Nn \l__image_ury_dim { \box_ht:N \l__image_tmp_box }
-    \int_const:cn { c__image_ #1 \l_@@_image_attr_tl _int }
+    \dim_set:Nn \l_image_urx_dim { \box_wd:N \l_@@_tmp_box }
+    \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_tmp_box }
+    \int_const:cn { c_@@_image_ #1 \l_@@_image_attr_tl _int }
       { \tex_the:D \pdftex_pdflastximage:D }
-    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _urx_dim }
-      { \l__image_urx_dim }
-    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _ury_dim }
-      { \l__image_ury_dim }
+    \image_bb_save:x { #1 \l_@@_image_attr_tl }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1558,7 +1547,7 @@
 \cs_new_protected:Npn \@@_image_include_jpg:n #1
   {
     \pdftex_pdfrefximage:D
-      \int_use:c { c__image_ #1 \l_@@_image_attr_tl _int }
+      \int_use:c { c_@@_image_ #1 \l_@@_image_attr_tl _int }
   }
 \cs_new_eq:NN \@@_image_include_pdf:n \@@_image_include_jpg:n
 \cs_new_eq:NN \@@_image_include_png:n \@@_image_include_jpg:n
@@ -1682,20 +1671,20 @@
 %   Simply use the generic functions: only for \texttt{dvipdfmx} in the
 %   extraction cases.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_image_getbb_eps:n \__image_read_bb:n
+\cs_new_eq:NN \@@_image_getbb_eps:n \image_read_bb:n
 %<*dvipdfmx>
 \cs_new_protected:Npn \@@_image_getbb_jpg:n #1
   {
-    \int_zero:N \l__image_page_int
-    \tl_clear:N \l__image_pagebox_tl
-    \__image_extract_bb:n {#1}
+    \int_zero:N \l_image_page_int
+    \tl_clear:N \l_image_pagebox_tl
+    \image_extract_bb:n {#1}
   }
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
-    \tl_clear:N \l__image_decode_tl
-    \bool_set_false:N \l__image_interpolate_bool
-    \__image_extract_bb:n {#1}
+    \tl_clear:N \l_image_decode_tl
+    \bool_set_false:N \l_image_interpolate_bool
+    \image_extract_bb:n {#1}
   }
 %</dvipdfmx>
 %    \end{macrocode}
@@ -1742,23 +1731,23 @@
   {
     \@@_image_include_auxii:xnn
       {
-        \tl_if_empty:NF \l__image_pagebox_tl
-          { : \l__image_pagebox_tl }
-        \int_compare:nNnT \l__image_page_int > 1
-          { :P \int_use:N \l__image_page_int }
-        \tl_if_empty:NF \l__image_decode_tl
-          { :D \l__image_decode_tl }
-        \bool_if:NT \l__image_interpolate_bool
+        \tl_if_empty:NF \l_image_pagebox_tl
+          { : \l_image_pagebox_tl }
+        \int_compare:nNnT \l_image_page_int > 1
+          { :P \int_use:N \l_image_page_int }
+        \tl_if_empty:NF \l_image_decode_tl
+          { :D \l_image_decodearray_tl }
+        \bool_if:NT \l_image_interpolate_bool
            { :I }
       }
       {#1} {#2}
   }
 \cs_new_protected:Npn \@@_image_include_auxii:nnn #1#2#3
   {
-    \int_if_exist:cTF { c__image_ #2#1 _int }
+    \int_if_exist:cTF { c_@@_image_ #2#1 _int }
       {
         \tex_special:D
-          { pdf:usexobj~@image \int_use:c { c__image_ #2#1 _int } }
+          { pdf:usexobj~@image \int_use:c { c_@@_image_ #2#1 _int } }
       }
       { \@@_image_include_auxiii:nn {#2} {#1} {#3} }
   }
@@ -1772,31 +1761,31 @@
 \cs_new_protected:Npn \@@_image_include_auxiii:nnn #1#2#3
   {
     \int_gincr:N \g_@@_image_int
-    \int_const:cn { c__image_ #1#2 _int } { \g_@@_image_int }
+    \int_const:cn { c_@@_image_ #1#2 _int } { \g_@@_image_int }
     \tex_special:D
       {
         pdf:#3~
-        @image \int_use:c { c__image_ #1#2 _int }
-        \int_compare:nNnT \l__image_page_int > 1
-          { page ~ \int_use:N \l__image_page_int \c_space_tl }
-        \tl_if_empty:NF \l__image_pagebox_tl
+        @image \int_use:c { c_@@_image_ #1#2 _int }
+        \int_compare:nNnT \l_image_page_int > 1
+          { page ~ \int_use:N \l_image_page_int \c_space_tl }
+        \tl_if_empty:NF \l_image_pagebox_tl
           {
-            pagebox ~ \l__image_pagebox_tl \c_space_tl
+            pagebox ~ \l_image_pagebox_tl \c_space_tl
             bbox ~
-              \dim_to_decimal_in_bp:n \l__image_llx_dim \c_space_tl
-              \dim_to_decimal_in_bp:n \l__image_lly_dim \c_space_tl
-              \dim_to_decimal_in_bp:n \l__image_urx_dim \c_space_tl
-              \dim_to_decimal_in_bp:n \l__image_ury_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l_image_llx_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l_image_lly_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l_image_urx_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l_image_ury_dim \c_space_tl
           }
         (#1)
         \bool_lazy_or:nnT
-          { \l__image_interpolate_bool }
-          { ! \tl_if_empty_p:N \l__image_decode_tl }
+          { \l_image_interpolate_bool }
+          { ! \tl_if_empty_p:N \l_image_decodearray_tl }
           {
             <<
-              \tl_if_empty:NF \l__image_decode_tl
-                { /Decode~[ \l__image_decode_tl ] }
-              \bool_if:NT \l__image_interpolate_bool
+              \tl_if_empty:NF \l_image_decode_tl
+                { /Decode~[ \l_image_decodearray_tl ] }
+              \bool_if:NT \l_image_interpolate_bool
                 { /Interpolate~true> }
             >>
           }
@@ -1836,21 +1825,21 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_getbb_jpg:n #1
   {
-    \int_zero:N \l__image_page_int
-    \tl_clear:N \l__image_pagebox_tl
+    \int_zero:N \l_image_page_int
+    \tl_clear:N \l_image_pagebox_tl
     \@@_image_getbb_auxi:nN {#1} \xetex_picfile:D
   }
 \cs_new_eq:NN \@@_image_getbb_png:n \@@_image_getbb_jpg:n
 \cs_new_protected:Npn \@@_image_getbb_pdf:n #1
   {
-    \tl_clear:N \l__image_decode_tl
-    \bool_set_false:N \l__image_interpolate_bool
+    \tl_clear:N \l_image_decode_tl
+    \bool_set_false:N \l_image_interpolate_bool
     \@@_image_getbb_auxi:nN {#1} \xetex_pdffile:D
   }
 \cs_new_protected:Npn \@@_image_getbb_auxi:nN #1#2
   {
-    \int_compare:nNnTF \l__image_page_int > 1
-      { \@@_image_getbb_auxii:VnN \l__image_page_int {#1} #2  }
+    \int_compare:nNnTF \l_image_page_int > 1
+      { \@@_image_getbb_auxii:VnN \l_image_page_int {#1} #2  }
       { \@@_image_getbb_auxiii:nNnn {#1} #2 }
   }
 \cs_new_protected:Npn \@@_image_getbb_auxii:nnN #1#2#3
@@ -1858,8 +1847,8 @@
 \cs_generate_variant:Nn \@@_image_getbb_auxii:nnN { V }
 \cs_new_protected:Npn \@@_image_getbb_auxiii:nNnn #1#2#3#4
   {
-    \tl_if_empty:NTF \l__image_pagebox_tl
-      { \@@_image_getbb_auxiv:VnNnn \l__image_pagebox_tl }
+    \tl_if_empty:NTF \l_image_pagebox_tl
+      { \@@_image_getbb_auxiv:VnNnn \l_image_pagebox_tl }
       { \@@_image_getbb_auxv:nNnn }
       {#1} #2 {#3} {#4}
   }
@@ -1874,24 +1863,15 @@
 \cs_generate_variant:Nn \@@_image_getbb_auxiv:nnNnn { V }
 \cs_new_protected:Npn \@@_image_getbb_auxv:nNnn #1#2#3#4
   {
-    \dim_zero:N \l__image_llx_dim
-    \dim_zero:N \l__image_lly_dim
-    \dim_if_exist:cTF { c__image_ #1#3 _urx_dim }
-      {
-        \dim_set_eq:Nc \l__image_urx_dim { c__image_ #1#3 _urx_dim }
-        \dim_set_eq:Nc \l__image_ury_dim { c__image_ #1#3 _ury_dim }
-      }
+    \image_bb_restore:nF {#1#3}
       { \@@_image_getbb_auxvi:nNnn {#1} #2 {#3} {#4} }
   }
 \cs_new_protected:Npn \@@_image_getbb_auxvi:nNnn #1#2#3#4
   {
-    \hbox_set:Nn \l__image_tmp_box { #2 #1 ~ #4 }
-    \dim_set:Nn \l__image_utx_dim { \box_wd:N \l__image_tmp_box }
-    \dim_set:Nn \l__image_ury_dim { \box_ht:N \l__image_tmp_box }
-    \dim_const:cn { c__image_ #1#3 _urx_dim }
-      { \l__image_urx_dim }
-    \dim_const:cn { c__image_ #1#3 _ury_dim }
-      { \l__image_ury_dim }
+    \hbox_set:Nn \l_@@_tmp_box { #2 #1 ~ #4 }
+    \dim_set:Nn \l_image_utx_dim { \box_wd:N \l_@@_tmp_box }
+    \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_tmp_box }
+    \image_bb_save:n {#1#3}
   }
 \cs_new:Npn \@@_image_getbb_pagebox:w #1 box {#1}
 %    \end{macrocode}
@@ -1907,14 +1887,14 @@
 %   For PDF images, properly supporting the |pagebox| concept in \XeTeX{}
 %   is best done using the |\xetex_pdffile:D| primitive. The syntax here
 %   is the same as for the image measurement part, although we know at this
-%   stage that there must be some valid setting for \cs{l__image_pagebox_tl}.
+%   stage that there must be some valid setting for \cs{l_image_pagebox_tl}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_include_pdf:n #1
   {
     \xetex_pdffile:D "#1" ~
-      \int_compare:nNnT \l__image_page_int > 0
-        { page~ \int_use:N \l__image_page_int }
-      \@@_image_getbb_auxiv:VnNnn \l__image_pagebox_tl
+      \int_compare:nNnT \l_image_page_int > 0
+        { page~ \int_use:N \l_image_page_int }
+      \@@_image_getbb_auxiv:VnNnn \l_image_pagebox_tl
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2437,8 +2417,8 @@
 % \begin{macro}{\@@_image_getbb_png:n, \@@_image_getbb_jpg:n}
 %   These can be included by extracting the bounding box data.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_image_getbb_png:n \__image_extract_bb:n
-\cs_new_eq:NN \@@_image_getbb_jpg:n \__image_extract_bb:n
+\cs_new_eq:NN \@@_image_getbb_png:n \image_extract_bb:n
+\cs_new_eq:NN \@@_image_getbb_jpg:n \image_extract_bb:n
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2456,8 +2436,8 @@
      \tex_special:D
        {
          dvisvgm:img~
-         \dim_to_decimal:n { \l__image_ury_dim } ~
-         \dim_to_decimal:n { \l__image_ury_dim } ~
+         \dim_to_decimal:n { \l_image_ury_dim } ~
+         \dim_to_decimal:n { \l_image_ury_dim } ~
          \@@_image_include_bitmap_quote:w #1 " " \q_stop
        }
   }
