--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: xfp.dtx (C) Copyright 2017 The LaTeX3 Project
+%% File: xfp.dtx (C) Copyright 2017-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
