--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -99,6 +99,18 @@
 % will appear. Note that these all apply \emph{globally}, though some are
 % rest at the start of each drawing (\cs{draw_begin:}).
 %
+% \begin{function}{\draw_scope_begin:, \draw_scope_end:}
+%   \begin{syntax}
+%     \cs{draw_scope_begin:}
+%     ...
+%     \cs{draw_scope_end:}
+%   \end{syntax}
+%   Creates a scope for localisation of state settings within a drawing.
+%   A scope forms a \TeX{} group but will also localise global state
+%   variables (such as \cs{g_draw_linewidth_default_dim}), and driver-level
+%   concepts such as the termination of lines.
+% \end{function}
+%
 % \begin{function}{\g_draw_linewidth_default_dim}
 %   The default value of the linewidth for stokes, set at the start
 %   of every drawing (\cs{draw_begin:}).
